Fix: css for light/dark mode

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -13,12 +13,13 @@ footer {
     p {
         color: var(--text);
         font-size: 1rem;
+        font-weight: 600;
     }
     /* border: 2px solid green; */
 }
 
 .footer-link-wrapper{
-    width: 15%;
+    width: 20%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
